// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.loadtest.config;

import "wfa/measurement/api/v2alpha/event_annotations.proto";

option java_package = "org.wfanet.measurement.loadtest.config";
option java_multiple_files = true;

message LoadTestEvent {
  message Privacy {
    option (.wfa.measurement.api.v2alpha.event_template) = {
      name: "privacy"
    };

    // Whether or not this event can be filtered by the privacy bucket filter.
    bool filterable = 1;
  }

  Privacy privacy = 1;
}
